--- a/index.html
+++ b/index.html
@@ -23,8 +23,30 @@
 </head>
 <body>
   <div id="wrapper">
+    <nav class="navbar navbar-expand-xl navbar-light fixed-top">
 
-    
+<!-- ****************NAVBAR HAMBURGER********************** -->
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+
+        <span class="navbar-toggler-icon"></span>
+
+      </button>
+
+<!-- ****************NAVBAR HAMBURGER END********************** -->
+
+      <div class="collapse navbar-collapse" id="navbarContent">
+				<ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Gallery</li>
+          <li>Services</li>
+          <li>Contact</li>
+        </ul>
+			</div>
+    </nav>
+
+
   </div>
 
   <script src="js/main.js" charset="utf-8"></script>
